# librtdi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REQUIREMENTS.md  review_1.md  review_2.md  review_3.md
cmake/: CompilerWarnings.cmake  Dependencies.cmake  librtdiConfig.cmake.in
docs/: REQUIREMENTS.md
docs/superpowers/specs/: 2026-06-24-singleton-destruction-order-design.md
examples/: CMakeLists.txt  basic_usage.cpp
include/: librtdi.hpp
include/librtdi/: decorated_ptr.hpp  descriptor.hpp  erased_ptr.hpp  exceptions.hpp  export.hpp  fwd.hpp  lifetime.hpp  registry.hpp  resolver.hpp  scope.hpp  type_traits.hpp
src/: CMakeLists.txt  exceptions.cpp  registry.cpp  resolver.cpp  scope.cpp  stacktrace_capture.cpp  stacktrace_utils.hpp  validation.cpp
tests/: CMakeLists.txt  test_auto_wiring.cpp  test_concurrency.cpp  test_decorator.cpp  test_diagnostics.cpp  test_eager.cpp  test_edge_cases.cpp  test_forward.cpp  test_inheritance.cpp  test_keyed.cpp  test_lifetime.cpp  test_multi_impl.cpp  test_policy.cpp  test_registration.cpp  test_resolution.cpp  test_scope.cpp  test_validation.cpp
